--- a/style/layout.css
+++ b/style/layout.css
@@ -1,17 +1,19 @@
 #photo-template{
-    display: inline-block;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
      /* height: 300px; */
     /* width: 300px;  */
 padding: 10px;  
 width: 300px;
 height: 350px;
 margin: 20px;
-float: left;
+/* float: left; */
 }
 h2{
     width: 150px;
     text-align: center;
-    padding-left: 25%;
+    /* padding-left: 25%; */
 }
 #p1{
     width: 280px;
@@ -19,18 +21,21 @@ h2{
 } 
 img{
     height: 200px;
-    padding: 0px; 
+    padding: 20px; 
+    display: flex;
+    justify-content: space-evenly;
+    
 }
-main{
+/* main{
     margin-left: 10%;
-    display: inline-block;
+    display: flex;
      text-align: center;
 padding-top: 100px;
-}
+} */
 h1{
     text-align: center;
 }
-select{
+/* select{
     margin-left:  45%;
     margin-top: 2%;
-}
+} */
