--- a/style/modules.css
+++ b/style/modules.css
@@ -1,6 +1,7 @@
-#photo-template{
+/* #photo-template{
     border: 2px solid rgb(61, 55, 55); 
     }
     main{
     color: royalblue;
-    }
+    } */
+   
